Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24314

Unexpected error message when selecting from view that uses mergeable derived table

    XMLWordPrintable

Details

    Description

      The following test case demonstrates the problem:

      drop database test;
      create database test;
      create table test.t1 (a int);
      insert into test.t1 values (3),(7),(1);
      create view test.v2 as select * from (select * from test.t1) as t;
      select test.v2.a from test.v2;
      

      MariaDB [(none)]> select test.v2.a from test.v2;
      ERROR 1356 (HY000): View 'test.v2' references invalid table(s) or column(s) or function(s) or definer/invoker of view lack rights to use them                                                                                                                 

      Attachments

        Issue Links

          Activity

            People

              igor Igor Babaev (Inactive)
              igor Igor Babaev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: