MDEV-24314 Unexpected error message when selecting from view that uses            mergeable derived table

Do not check privileges for derived tables/CTEs and their fields.

Approved by Oleksandr Byelkin <sanja@mariadb.com>